Fix 7 Card Pile Alignment
The 7 card pile was misaligned. The issue was due to the width being to large for the container which caused the last pile to wrap to new row, which was adjusted. Also added box-sizing which changes how the browser calculates width.

[Ticket: X]

~
~
".git/COMMIT_EDITMSG" 14L, 297C

--- a/demo/cards2.css
+++ b/demo/cards2.css
@@ -154,10 +154,11 @@
      display: block;
      position: relative;
      float: left;
-     width: 13%;
+     width: 12.5%;
      margin-right: 1.5%;
      margin-bottom: 10px;
      padding: 5px;
+     box-sizing: border-box;
   }
   .pile:last-child {
      margin-right: 0;
